--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
+
 
     buildFeatures {
         viewBinding true
@@ -52,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.exoplayer:exoplayer:2.18.5'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
 
 }
